<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.wordpress.bhasser.conversionmaster.MainMenu" >

    <TextView
        android:id="@+id/txtViewMenuHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15sp"
        android:gravity="center"
        android:text="@string/txtMenuDisplayInstructions"
        android:textSize="36sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewMenuHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2sp" >

        <RadioButton
            android:id="@+id/radChooseTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2sp"
            android:checked="true"
            android:text="@string/radChooseTemp" />

        <RadioButton
            android:id="@+id/radChooseVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2sp"
            android:text="@string/radChooseVolume" />

        <RadioButton
            android:id="@+id/radChooseDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2sp"
            android:text="@string/radChooseDistance" />

        <RadioButton
            android:id="@+id/radChooseWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2sp"
            android:text="@string/radChooseWeight" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConversionChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25sp"
        android:text="@string/btnGo" />

</RelativeLayout>
