<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.wordpress.bhasser.conversionmaster.Weight" >

     <TextView
         android:id="@+id/txtWeightHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5sp"
         android:gravity="center"
         android:text="@string/txtWeightHeader"
         android:textSize="24sp"
         android:textStyle="bold" />

    <EditText
        android:id="@+id/edittxtWeightInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWeightHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:ems="10"
        android:hint="@string/hntWeightInput"
        android:inputType="number|numberDecimal" >
    </EditText>
    
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtWeightInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp" >

        <RadioButton
            android:id="@+id/radLbToKg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radLbtoKg" />

        <RadioButton
            android:id="@+id/radKgToLbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radKgToLbs" />
    </RadioGroup>
    
    <Button
        android:id="@+id/btnCalculateWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:text="@string/btnCalculateWeight" />

    <TextView
        android:id="@+id/txtWeightResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCalculateWeight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnReturnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtWeightHeader"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/btnReturnHome" />

</RelativeLayout>
