<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.wordpress.bhasser.conversionmaster.Volume" >
    
    <TextView
        android:id="@+id/txtVolumeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:text="@string/txtVolumeHeader"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittxtVolumeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVolumeHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15sp"
        android:layout_marginTop="15sp"
        android:ems="10"
        android:hint="@string/hntVolumeInput"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>    

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtVolumeInput"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15sp">

        <RadioButton
            android:id="@+id/radOzToMl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:checked="true"
            android:text="@string/radOzToMl" />

        <RadioButton
            android:id="@+id/radMlToOz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radMlToOz" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalculateVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:text="@string/btnCalculateVolume" />
    
    <TextView
        android:id="@+id/txtVolumeResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCalculateVolume"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnReturnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_alignParentBottom="true"
        android:text="@string/btnReturnHome" />

    

</RelativeLayout>